force-app/main/default/objects/ReturnOrder/fields/API_JSON__c.field-meta.xml
<CustomField>
    <fullName>API_JSON__c</fullName>
    <label>API JSON</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>