force-app/main/default/objects/ReturnOrder/fields/Location_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>Location_External_Reference__c</fullName>
    <formula>SourceLocation.ExternalReference</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location External Reference</label>
    <type>Text</type>
</CustomField>