force-app/main/default/objects/ReturnOrder/fields/Return_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Return_Order_ID__c</fullName>
    <label>Return Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>