force-app/main/default/objects/ReturnOrder/recordTypes/Unfinished.recordType-meta.xml
<RecordType>
    <fullName>Unfinished</fullName>
    <active>true</active>
    <description>This return order has been refunded, but not yet exported to Magento or the LSP.</description>
    <label>Unfinished</label>
</RecordType>